<resources>
    <string name="app_name">CPSLab411</string>
    <string name="game_view_content_description">Game view</string>
    <string name="nav_nav">Navigation</string>
    <string name="nav_map">Maps</string>
    <string name="nav_cam">Camera</string>
    <string name="nav_con">Connection</string>
    <string name="nav_set">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fb">Facebook</string>
    <string name="Web">Website</string>
    <string name="email">Email</string>
    <string name="disconnect">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="arming">Arming</string>
    <string name="disarm">Disarmed</string>
    <string name="position">Position</string>
    <string name="offboard">OffBoard</string>
    <string name="manual">Manual</string>
    <string name="land">Land</string>
    <string name="hold">Hold</string>
    <string name="robotControl">Robot Control</string>
    <string name="manualControl">Manual Control</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="depth_use_explanation" translatable="false">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string name="button_text_enable_depth" translatable="false">Enable</string>
    <string name="button_text_disable_depth" translatable="false">Disable</string>
    <string name="options_title_with_depth" translatable="false">Your device supports depth</string>
    <string name="options_title_without_depth" translatable="false">Your device does not support depth</string>
    <string name="done" translatable="false">Done</string>
    <string-array name="depth_options_array" translatable="false">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string name="options_title_instant_placement" translatable="false">Instant Placement options</string>
    <string name="takeoff">TakeOff</string>
    <string name="set_waypoint_properties">Set waypoint properties</string>
    <string name="set_altitude">Set Altitude (m)</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="set_speed">Set Speed (m/s)</string>
    <string name="connect_to_server">Connect To Server</string>
    <string name="disconnect_to_server">Disconnect to Server</string>
    <string name="port_no">Port No</string>
    <string name="ip_address">IP-Address</string>
    <string-array name="instant_placement_options_array" translatable="false">
        <item>Enable Instant Placement</item>
    </string-array>

</resources>