<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">


        <item android:title="@string/nav_nav">
            <menu>

                <item
                    android:id="@+id/nav_map"
                    android:title="@string/nav_map"
                    android:icon="@drawable/ic_map"/>

                <item
                    android:id="@+id/nav_con"
                    android:title="@string/nav_con"
                    android:icon="@drawable/ic_connect"/>

<!--                <item-->
<!--                    android:id="@+id/nav_set"-->
<!--                    android:title="@string/nav_set"-->
<!--                    android:icon="@drawable/ic_settings"/>-->

            </menu>

        </item>

        <item android:title="About US">
            <menu>
                <item
                    android:title="@string/fb"
                    android:icon="@drawable/icons8facebook"/>

                <item
                    android:title="@string/Web"
                    android:icon="@drawable/ic_web"/>

                <item
                    android:title="@string/email"
                    android:icon="@drawable/ic_email"/>

            </menu>
        </item>

    </group>
</menu>