<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_conner_16"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/bg_gray_conner__top_left_16"
        android:text="@string/set_waypoint_properties"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/black"
            android:text="@string/set_altitude"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/edt_wp_altitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="8dp"
            android:textSize="11sp"
            android:background="@drawable/bg_white_conner_10_border_gray"
            android:inputType="number"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="@color/black"
            android:text="@string/set_speed"
            android:layout_marginTop="12dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_wp_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="11sp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_white_conner_10_border_gray"
            android:inputType="number"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_wp_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="11sp"
                android:text="@string/cancel"
                android:background="@drawable/bg_dark_gray_conner_10"
                android:layout_marginEnd="10dp"
                android:alpha="0.4" />

            <Button
                android:id="@+id/btn_wp_apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="11sp"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/bg_gray_conner_10"
                android:layout_marginStart="10dp"/>



        </LinearLayout>

    </LinearLayout>



</LinearLayout>